--- a/tutorial.html
+++ b/tutorial.html
@@ -26,18 +26,8 @@
     </div>
 
     <h1 class="tutorial-title">Guía de germinación</h1>
-    <p class="tutorial-sub">Acá vamos a sumar el paso a paso. Por ahora te dejamos una estructura simple.</p>
 
     <section class="tutorial-card">
-      <h3>Antes de empezar</h3>
-      <ul>
-        <li>Usá agua limpia y temperatura estable.</li>
-        <li>No manipules la semilla de más.</li>
-        <li>Evitá exceso de humedad (riesgo de hongos).</li>
-      </ul>
-    </section>
-
-    <section class="tutorial-card tutorial-light">
       <h3>La Temperatura De Germinación Juega Un Papel Crucial</h3>
       <img class="tutorial-img" src="img/00.png" alt="Rangos de temperatura para germinación" loading="lazy" decoding="async">
       <p>Antes de saltar directamente a los métodos de germinación, hay un par de reglas de oro de germinación. Para obtener los mejores resultados, recomendamos mantenerse dentro de estas pautas, sin importar cómo elija germinar. Dicho esto, de todos los factores a considerar, la temperatura es una de las más críticas. Las semillas siempre buscarán incluso la menor cantidad de humedad, pero utilizan la temperatura como una señal de que necesitan hacerlo.</p>
@@ -50,6 +40,34 @@
         <li>En los tapones hidropónicos / de lana de roca, el valor de pH ideal es de 5.8 a 6.2</li>
       </ul>
     </section>
+
+    <section class="tutorial-card">
+      <h3>Método de toalla de cocina húmeda</h3>
+      <img class="tutorial-img" src="img/01.jpg" alt="Método de toalla de cocina húmeda" loading="lazy" decoding="async">
+      <p>Probablemente uno de los métodos más comunes de germinación. El método de la toalla de cocina viene en varias iteraciones. Algunos cultivadores usan almohadillas de lana de algodón o trozos de papel absorbentes. Para esta guía, usaremos una toalla de cocina, ya que está disponible y retiene la humedad relativamente bien.</p>
+      <p>Coloque una hoja de toalla de cocina húmeda sobre una superficie plana. Espacie sus semillas unos centímetros antes de colocar la segunda pieza de toalla de cocina sobre la parte superior. Debe asegurarse de que ambas piezas estén húmedas, no húmedas. Una vez más, cuando las puntas de la raíz blanca alcancen de 1 a 2 cm, mueva las semillas (con cuidado) a las macetas del suelo. Utilice la misma guía que se encuentra arriba para las técnicas de siembra.</p>
+    </section>
+
+    <section class="tutorial-card">
+      <h3>Jiffy Plug De Enraizamiento</h3>
+      <img class="tutorial-img" src="img/02.jpg" alt="Jiffy Plug de enraizamiento" loading="lazy" decoding="async">
+      <p>Los tapones de suelo RQS son otra gran opción cuando se trata de germinar semillas. Son fáciles de usar y contienen una fórmula cuidadosamente elaborada de ingredientes diseñados para ayudar a que las plántulas prosperen. Compuestos por la turba y el coir de la más alta calidad, proporcionan un excelente equilibrio de aireación y retención de agua.</p>
+      <ul class="tutorial-bullets">
+        <li>Esto asegura que las semillas no se sequen, al tiempo que previenen enfermedades fúngicas que causan la temida amortiguación.</li>
+      </ul>
+      <p>Los tapones de suelo RQS contienen micronutrientes clave que las plántulas requieren para un crecimiento y desarrollo óptimos. La adición de productos biológicos activos también ayuda a establecer el microbioma de la raíz con organismos beneficiosos que se defienden de los patógenos y ayudan en la absorción de nutrientes y la descomposición de la materia orgánica. Además, la naturaleza equilibrada por pH de estos tapones significa que las raíces de cannabis pueden absorber fácilmente nutrientes sin el riesgo de bloqueo.</p>
+      <p>Son muy fáciles de manejar y eliminan cualquier molestia del trasplante. Una vez que las raíces comienzan a aparecer, puede trasplantar plántulas directamente en el suelo o los sistemas hidropónicos.</p>
+      <p>Para usar RQS Soil Plugs, coloque una sola semilla de su elección en cada enchufe. Coloque sus enchufes en una bandeja de propagación y péguelos con agua, lo suficiente como para humedecerlos. Utilice una tapa de plástico transparente para mantener la humedad, y apunte a las condiciones de temperatura y humedad que se analizan anteriormente. Utilice un pequeño higrómetro para hacer un seguimiento de estas importantes figuras.</p>
+    </section>
+
+    <section class="tutorial-card">
+      <h3>Directo en Vaso de Agua</h3>
+      <img class="tutorial-img" src="img/03.png" alt="Germinación directo en vaso de agua" loading="lazy" decoding="async">
+      <p>Podría decirse que uno de los métodos menos eficaces, pero sigue siendo viable. Increíblemente simple de facilitar, los cultivadores principiantes pueden optar por germinar sus semillas en un vaso de agua. Selvar a medias un vaso o un recipiente con agua que sea de aproximadamente 22°C (71°F).</p>
+      <p>Después de 3-5 días, las semillas comenzarán a abrirse, y deberías ver pequeñas puntas blancas. Una vez que estas raíces alcancen de 1 a 2 cm de longitud, use un cuidado extremo para transferirlas del agua a macetas de tierra prepreparadas.</p>
+      <p>Las macetas de tierra necesitarán pequeños agujeros (aproximadamente 10-15 mm de profundidad) para colocar las semillas recién germinadas. Una vez que las semillas estén seguras, querrá colocar una luz fluorescente a 13-15 cm (5-6 pulgadas) de distancia para fomentar el crecimiento. Finalmente, no se arriesgue a regar en exceso sus semillas en esta etapa temprana. Use un abusador de plantas para asegurarse de que permanezcan húmedos pero no empapados.</p>
+    </section>
+
 
     <section class="tutorial-card">
       <h3>¿Querés ayuda?</h3>
