--- a/index.html
+++ b/index.html
@@ -31,52 +31,35 @@
 </div>
 <div aria-label="Carrusel de productos" class="carousel" id="carousel2"></div>
 </section>
-
-<div class="section-divider" role="separator" aria-hidden="true"></div>
-
-
+<div aria-hidden="true" class="section-divider" role="separator"></div>
 <section class="guide-section" id="guia">
-  <div class="guide-head">
-    <h3 class="guide-title">Guía de germinación</h3>
-    <a class="guide-link" href="tutorial.html" aria-label="Abrir guía de germinación">Ver guía</a>
-  </div>
-
-  <div class="background-banner">
-    <img alt="Guía de germinación" class="background-banner-img" decoding="async" loading="lazy" src="img/fondo-germinacion.png" width="1600" height="450"/>
+<div class="guide-head">
+<h3 class="guide-title">Guía de germinación</h3>
+<a aria-label="Abrir guía de germinación" class="guide-link" href="tutorial.html">Ver guía</a>
 </div>
-
-  </section>
-
-<div class="section-divider" role="separator" aria-hidden="true"></div>
-
+<div class="background-banner">
+<img alt="Guía de germinación" class="background-banner-img" decoding="async" height="450" loading="lazy" src="img/fondo-germinacion.png" width="1600"/>
+</div>
+</section>
+<div aria-hidden="true" class="section-divider" role="separator"></div>
 <section class="delivery-section" id="entregas">
-  <div class="delivery-head">
-    <h3 class="delivery-title">Entregas personales</h3>
-    <a class="delivery-map-link" href="https://share.google/aTvnKdci49puncguC" target="_blank" rel="noopener">Ver mapa</a>
-  </div>
-
-  <p class="delivery-text">
+<div class="delivery-head">
+<h3 class="delivery-title">Entregas personales</h3>
+<a class="delivery-map-link" href="https://share.google/aTvnKdci49puncguC" rel="noopener" target="_blank">Ver mapa</a>
+</div>
+<p class="delivery-text">
     Coordinamos la entrega por WhatsApp. Zona: <strong>Almagro (CABA)</strong>.
     Consultá día y horario disponibles.
   </p>
-
-  <div class="delivery-map" aria-label="Mapa de la zona de Almagro">
-    <iframe
-      class="delivery-map-frame"
-      title="Mapa de Almagro"
-      loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade"
-      src="https://www.google.com/maps?q=Almagro%2C%20CABA&output=embed"></iframe>
-  </div>
+<div aria-label="Mapa de la zona de Almagro" class="delivery-map">
+<iframe class="delivery-map-frame" loading="lazy" referrerpolicy="no-referrer-when-downgrade" src="https://www.google.com/maps?q=Almagro%2C%20CABA&amp;output=embed" title="Mapa de Almagro"></iframe>
+</div>
 </section>
-
-<div class="section-divider" role="separator" aria-hidden="true"></div>
-
+<div aria-hidden="true" class="section-divider" role="separator"></div>
 <section class="shipping-section" id="envios">
-  <h3 class="shipping-title">También hacemos envíos a todo el país por Andreani</h3>
-  <img class="shipping-img" src="img/andreani.png" alt="Andreani - Envíos a todo el país" loading="lazy" decoding="async" width="1500" height="292"/>
+<h3 class="shipping-title">También hacemos envíos a todo el país por Andreani</h3>
+<img alt="Andreani - Envíos a todo el país" class="shipping-img" decoding="async" height="292" loading="lazy" src="img/andreani.png" width="1500"/>
 </section>
-
 </main>
 <noscript><div style="padding:12px;color:#fff;background:#111;border:1px solid #222;border-radius:12px;margin:12px;">Para ver el catálogo completo, activá JavaScript en tu navegador.</div></noscript>
 <!-- modal gallery -->
@@ -90,15 +73,15 @@
 <script defer="" src="js/app.js"></script>
 <script defer="" src="js/pwa.js"></script>
 <!-- WhatsApp Floating Button -->
-<a class="wa-toast" aria-label="Pedir por WhatsApp" href="https://wa.me/5491158768929?text=Hola%20NOVA%20Seeds%2C%20quiero%20hacer%20un%20pedido%20o%20consultar%20por%20variedades." rel="noopener" target="_blank">
-  <span class="wa-toast__icon" aria-hidden="true">
-    <svg viewBox="0 0 24 24" width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M20 15.5c0 1.38-1.12 2.5-2.5 2.5H8l-4 3v-3H6.5C5.12 18 4 16.88 4 15.5v-8C4 6.12 5.12 5 6.5 5h11C18.88 5 20 6.12 20 7.5v8Z" fill="white" opacity="0.95"/>
-      <path d="M8 10.2h8M8 13h5.2" stroke="#25D366" stroke-width="2" stroke-linecap="round"/>
-    </svg>
-  </span>
-  <span class="wa-toast__text">Pedir por WhatsApp</span>
-</a>
+<a aria-label="Pedir por WhatsApp" class="wa-toast" href="https://wa.me/5491158768929?text=Hola%20NOVA%20Seeds%2C%20quiero%20hacer%20un%20pedido%20o%20consultar%20por%20variedades." rel="noopener" target="_blank">
+<span aria-hidden="true" class="wa-toast__icon">
+<svg fill="none" height="22" viewbox="0 0 24 24" width="22" xmlns="http://www.w3.org/2000/svg">
+<path d="M20 15.5c0 1.38-1.12 2.5-2.5 2.5H8l-4 3v-3H6.5C5.12 18 4 16.88 4 15.5v-8C4 6.12 5.12 5 6.5 5h11C18.88 5 20 6.12 20 7.5v8Z" fill="white" opacity="0.95"></path>
+<path d="M8 10.2h8M8 13h5.2" stroke="#25D366" stroke-linecap="round" stroke-width="2"></path>
+</svg>
+</span>
+<span class="wa-toast__text">Pedir por WhatsApp</span>
+</a><a aria-label="Instalar app" class="app-toast" href="#" id="install-toast" role="button"><span aria-hidden="true" class="app-toast__icon"><img alt="" decoding="async" height="26" loading="lazy" src="img/app.png" width="26"/></span><span class="app-toast__text">Instalar app</span></a>
 <a aria-label="WhatsApp" class="wa-fab" href="https://wa.me/5491158768929?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n." id="wa-fab" rel="noopener" target="_blank"></a>
 </body>
 </html>
