--- a/tutorial.html
+++ b/tutorial.html
@@ -51,13 +51,14 @@
     <section class="tutorial-card">
       <h3>Jiffy Plug De Enraizamiento</h3>
       <img class="tutorial-img" src="img/02.jpg" alt="Jiffy Plug de enraizamiento" loading="lazy" decoding="async">
-      <p>Los tapones de suelo RQS son otra gran opción cuando se trata de germinar semillas. Son fáciles de usar y contienen una fórmula cuidadosamente elaborada de ingredientes diseñados para ayudar a que las plántulas prosperen. Compuestos por la turba y el coir de la más alta calidad, proporcionan un excelente equilibrio de aireación y retención de agua.</p>
-      <ul class="tutorial-bullets">
-        <li>Esto asegura que las semillas no se sequen, al tiempo que previenen enfermedades fúngicas que causan la temida amortiguación.</li>
+      <p>Los jiffys son una buena herramienta para sembrar y germinar semillas y esquejes y poder cultivar plantas de una forma fácil. Está compuesto por turba prensada y fibra de coco que al humedecerse llega a aumentar hasta 7 veces su tamaño, ofreciendo un buen sustrato para la germinación de las semillas.</p>
+      <ul class="tutorial-dots">
+        <li>Ponga los discos de Jiffy en una bandeja de siembra</li>
+        <li>Remoje los discos con agua tibia</li>
+        <li>Espere unos minutos a que se hidraten y retire el exceso de agua de la bandeja</li>
+        <li>Siembre las semillas o los esquejes en el centro, presione un poco</li>
+        <li>Cuando las semillas broten o el esqueje muestre raíces, trasplante a su lugar definitivo</li>
       </ul>
-      <p>Los tapones de suelo RQS contienen micronutrientes clave que las plántulas requieren para un crecimiento y desarrollo óptimos. La adición de productos biológicos activos también ayuda a establecer el microbioma de la raíz con organismos beneficiosos que se defienden de los patógenos y ayudan en la absorción de nutrientes y la descomposición de la materia orgánica. Además, la naturaleza equilibrada por pH de estos tapones significa que las raíces de cannabis pueden absorber fácilmente nutrientes sin el riesgo de bloqueo.</p>
-      <p>Son muy fáciles de manejar y eliminan cualquier molestia del trasplante. Una vez que las raíces comienzan a aparecer, puede trasplantar plántulas directamente en el suelo o los sistemas hidropónicos.</p>
-      <p>Para usar RQS Soil Plugs, coloque una sola semilla de su elección en cada enchufe. Coloque sus enchufes en una bandeja de propagación y péguelos con agua, lo suficiente como para humedecerlos. Utilice una tapa de plástico transparente para mantener la humedad, y apunte a las condiciones de temperatura y humedad que se analizan anteriormente. Utilice un pequeño higrómetro para hacer un seguimiento de estas importantes figuras.</p>
     </section>
 
     <section class="tutorial-card">
