--- a/tutorial.html
+++ b/tutorial.html
@@ -29,57 +29,56 @@
 
     <section class="tutorial-card">
       <h3>La Temperatura De Germinación Juega Un Papel Crucial</h3>
-      <img class="tutorial-img" src="img/00.png" alt="Rangos de temperatura para germinación" loading="lazy" decoding="async">
+      <img class="tutorial-img" src="img/00.png" alt="Temperatura de germinación" loading="lazy" decoding="async">
       <p>Antes de saltar directamente a los métodos de germinación, hay un par de reglas de oro de germinación. Para obtener los mejores resultados, recomendamos mantenerse dentro de estas pautas, sin importar cómo elija germinar. Dicho esto, de todos los factores a considerar, la temperatura es una de las más críticas. Las semillas siempre buscarán incluso la menor cantidad de humedad, pero utilizan la temperatura como una señal de que necesitan hacerlo.</p>
-      <ul class="tutorial-bullets">
-        <li>La temperatura ideal está entre 22° y 25°C (71–77°F)</li>
-        <li>Su entorno de crecimiento debe ser húmedo/húmedo, pero nunca mojado</li>
-        <li>El rango de humedad relativo debe estar entre el 70% y el 90%</li>
-        <li>Las semillas favorecen la iluminación fluorescente (Coode blanco frío 33)</li>
-        <li>Minimice la cantidad de manejo de semillas que hace</li>
-        <li>En los tapones hidropónicos / de lana de roca, el valor de pH ideal es de 5.8 a 6.2</li>
+      <ul class="tutorial-oo">
+        <li>La temperatura ideal está entre 22° y 25°C (71–77°F).</li>
+        <li>Su entorno de crecimiento debe ser húmedo/húmedo, pero nunca mojado.</li>
+        <li>El rango de humedad relativo debe estar entre el 70% y el 90%.</li>
+        <li>Las semillas favorecen la iluminación LED FRIO (5.000 – 10.000 Lumenes).</li>
+        <li>Minimice la cantidad de manejo de semillas que hace.</li>
+        <li>En los tapones hidropónicos / de lana de roca, el valor de pH ideal es de 5.8 a 6.2.</li>
       </ul>
     </section>
 
     <section class="tutorial-card">
       <h3>Método de toalla de cocina húmeda</h3>
       <img class="tutorial-img" src="img/01.jpg" alt="Método de toalla de cocina húmeda" loading="lazy" decoding="async">
-      <p>Probablemente uno de los métodos más comunes de germinación. El método de la toalla de cocina viene en varias iteraciones. Algunos cultivadores usan almohadillas de lana de algodón o trozos de papel absorbentes. Para esta guía, usaremos una toalla de cocina, ya que está disponible y retiene la humedad relativamente bien.</p>
-      <p>Coloque una hoja de toalla de cocina húmeda sobre una superficie plana. Espacie sus semillas unos centímetros antes de colocar la segunda pieza de toalla de cocina sobre la parte superior. Debe asegurarse de que ambas piezas estén húmedas, no húmedas. Una vez más, cuando las puntas de la raíz blanca alcancen de 1 a 2 cm, mueva las semillas (con cuidado) a las macetas del suelo. Utilice la misma guía que se encuentra arriba para las técnicas de siembra.</p>
+      <p>Probablemente uno de los métodos más comunes de germinación. El método de la toalla de cocina. Algunos cultivadores usan almohadillas de lana de algodón o trozos de papel absorbentes. Para esta guía, usaremos una toalla de cocina, ya que está disponible y retiene la humedad relativamente bien.</p>
+      <ul class="tutorial-oo">
+        <li>Coloque una hoja de toalla de cocina húmeda sobre una superficie plana (DENTRO DE 1 PLATO).</li>
+        <li>Espacie sus semillas unos centímetros antes de colocar la segunda pieza de toalla de cocina sobre la parte superior (TAPAR CON OTRO PLATO).</li>
+        <li>Debe asegurarse de que ambas piezas estén húmedas, No Mojadas.</li>
+        <li>Una vez más, cuando las puntas de la raíz blanca alcancen de 1 a 2 cm, mueva las semillas (con cuidado) a las macetas del suelo.</li>
+      </ul>
     </section>
 
     <section class="tutorial-card">
       <h3>Jiffy Plug De Enraizamiento</h3>
       <img class="tutorial-img" src="img/02.jpg" alt="Jiffy Plug de enraizamiento" loading="lazy" decoding="async">
       <p>Los jiffys son una buena herramienta para sembrar y germinar semillas y esquejes y poder cultivar plantas de una forma fácil. Está compuesto por turba prensada y fibra de coco que al humedecerse llega a aumentar hasta 7 veces su tamaño, ofreciendo un buen sustrato para la germinación de las semillas.</p>
-      <ul class="tutorial-dots">
-        <li>Ponga los discos de Jiffy en una bandeja de siembra</li>
-        <li>Remoje los discos con agua tibia</li>
-        <li>Espere unos minutos a que se hidraten y retire el exceso de agua de la bandeja</li>
-        <li>Siembre las semillas o los esquejes en el centro, presione un poco</li>
-        <li>Cuando las semillas broten o el esqueje muestre raíces, trasplante a su lugar definitivo</li>
+      <ul class="tutorial-oo">
+        <li>Ponga los discos de Jiffy en una bandeja de siembra.</li>
+        <li>Remoje los discos con agua tibia.</li>
+        <li>Espere unos minutos a que se hidraten y retire el exceso de agua de la bandeja.</li>
+        <li>Siembre las semillas o los esquejes en el centro, presione un poco.</li>
+        <li>Cuando las semillas broten o el esqueje muestre raíces, trasplante a su lugar definitivo.</li>
       </ul>
     </section>
 
     <section class="tutorial-card">
       <h3>Directo en Vaso de Agua</h3>
       <img class="tutorial-img" src="img/03.png" alt="Germinación directo en vaso de agua" loading="lazy" decoding="async">
-      <p>Podría decirse que uno de los métodos menos eficaces, pero sigue siendo viable. Increíblemente simple de facilitar, los cultivadores principiantes pueden optar por germinar sus semillas en un vaso de agua. Selvar a medias un vaso o un recipiente con agua que sea de aproximadamente 22°C (71°F).</p>
+      <p>Podría decirse que uno de los métodos menos eficaces, pero sigue siendo viable. Increíblemente simple de facilitar, los cultivadores principiantes pueden optar por germinar sus semillas en un vaso de agua, recipiente que sea de aproximadamente 22°C (71°F).</p>
       <p>Después de 3-5 días, las semillas comenzarán a abrirse, y deberías ver pequeñas puntas blancas. Una vez que estas raíces alcancen de 1 a 2 cm de longitud, use un cuidado extremo para transferirlas del agua a macetas de tierra prepreparadas.</p>
-      <p>Las macetas de tierra necesitarán pequeños agujeros (aproximadamente 10-15 mm de profundidad) para colocar las semillas recién germinadas. Una vez que las semillas estén seguras, querrá colocar una luz fluorescente a 13-15 cm (5-6 pulgadas) de distancia para fomentar el crecimiento. Finalmente, no se arriesgue a regar en exceso sus semillas en esta etapa temprana. Use un abusador de plantas para asegurarse de que permanezcan húmedos pero no empapados.</p>
-    </section>
-
-
-    <section class="tutorial-card">
-      <h3>¿Querés ayuda?</h3>
-      <ul>
-        <li>Escribinos por WhatsApp y te orientamos.</li>
+      <ul class="tutorial-oo">
+        <li>Las macetas de tierra necesitarán pequeños agujeros (aproximadamente 10-15 mm de profundidad) para colocar las semillas recién germinadas.</li>
+        <li>Una vez que las semillas estén seguras, querrá colocar una luz LED FRIO a 13-15 cm (5-6 pulgadas) de distancia para fomentar el crecimiento.</li>
+        <li>Finalmente, no se arriesgue a regar en exceso sus semillas en esta etapa temprana.</li>
       </ul>
-      <div style="margin-top:12px; text-align:center;">
-        <a class="tutorial-cta" href="https://wa.me/5491158768929?text=Hola%2C%20tengo%20una%20consulta%20sobre%20germinaci%C3%B3n." target="_blank" rel="noopener" aria-label="Consultar por WhatsApp">Consultar por WhatsApp</a>
-      </div>
     </section>
-  </main>
+
+</main>
 
   <script src="js/pwa.js" defer></script>
 </body>
