--- a/tutorial.html
+++ b/tutorial.html
@@ -13,7 +13,7 @@
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
-<body class="theme-dark tutorial-page">
+<body class="theme-dark tutorial-page" class="tutorial-page">
   <header class="site-header">
     <div class="header-inner">
       <img class="site-logo" src="img/logo.png" alt="Logo de NOVA Seeds" decoding="async" loading="eager">
@@ -29,7 +29,7 @@
 
     <section class="tutorial-card">
       <h3>La Temperatura De Germinación Juega Un Papel Crucial</h3>
-      <img class="tutorial-img" src="img/00.png" alt="Temperatura de germinación" loading="lazy" decoding="async">
+      <img class="tutorial-img guide-img" src="img/00.png" alt="Temperatura de germinación" loading="lazy" decoding="async">
       <p>Antes de saltar directamente a los métodos de germinación, hay un par de reglas de oro de germinación. Para obtener los mejores resultados, recomendamos mantenerse dentro de estas pautas, sin importar cómo elija germinar. Dicho esto, de todos los factores a considerar, la temperatura es una de las más críticas. Las semillas siempre buscarán incluso la menor cantidad de humedad, pero utilizan la temperatura como una señal de que necesitan hacerlo.</p>
       <ul class="tutorial-oo">
         <li>La temperatura ideal está entre 22° y 25°C (71–77°F).</li>
@@ -43,7 +43,7 @@
 
     <section class="tutorial-card">
       <h3>Método de toalla de cocina húmeda</h3>
-      <img class="tutorial-img" src="img/01.jpg" alt="Método de toalla de cocina húmeda" loading="lazy" decoding="async">
+      <img class="tutorial-img guide-img" src="img/01.jpg" alt="Método de toalla de cocina húmeda" loading="lazy" decoding="async">
       <p>Probablemente uno de los métodos más comunes de germinación. El método de la toalla de cocina. Algunos cultivadores usan almohadillas de lana de algodón o trozos de papel absorbentes. Para esta guía, usaremos una toalla de cocina, ya que está disponible y retiene la humedad relativamente bien.</p>
       <ul class="tutorial-oo">
         <li>Coloque una hoja de toalla de cocina húmeda sobre una superficie plana (DENTRO DE 1 PLATO).</li>
@@ -55,7 +55,7 @@
 
     <section class="tutorial-card">
       <h3>Jiffy Plug De Enraizamiento</h3>
-      <img class="tutorial-img" src="img/02.jpg" alt="Jiffy Plug de enraizamiento" loading="lazy" decoding="async">
+      <img class="tutorial-img guide-img" src="img/02.jpg" alt="Jiffy Plug de enraizamiento" loading="lazy" decoding="async">
       <p>Los jiffys son una buena herramienta para sembrar y germinar semillas y esquejes y poder cultivar plantas de una forma fácil. Está compuesto por turba prensada y fibra de coco que al humedecerse llega a aumentar hasta 7 veces su tamaño, ofreciendo un buen sustrato para la germinación de las semillas.</p>
       <ul class="tutorial-oo">
         <li>Ponga los discos de Jiffy en una bandeja de siembra.</li>
@@ -68,7 +68,7 @@
 
     <section class="tutorial-card">
       <h3>Directo en Vaso de Agua</h3>
-      <img class="tutorial-img" src="img/03.png" alt="Germinación directo en vaso de agua" loading="lazy" decoding="async">
+      <img class="tutorial-img guide-img" src="img/03.png" alt="Germinación directo en vaso de agua" loading="lazy" decoding="async">
       <p>Podría decirse que uno de los métodos menos eficaces, pero sigue siendo viable. Increíblemente simple de facilitar, los cultivadores principiantes pueden optar por germinar sus semillas en un vaso de agua, recipiente que sea de aproximadamente 22°C (71°F).</p>
       <p>Después de 3-5 días, las semillas comenzarán a abrirse, y deberías ver pequeñas puntas blancas. Una vez que estas raíces alcancen de 1 a 2 cm de longitud, use un cuidado extremo para transferirlas del agua a macetas de tierra prepreparadas.</p>
       <ul class="tutorial-oo">
