--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <section class="app-install-section" aria-label="Instalar app">
   <button class="app-toast app-install-btn" type="button" aria-label="Instalar NOVA Seeds">
-    <img id="appInstallImg" src="img/app.png" alt="Instalar NOVA Seeds" loading="lazy" decoding="async">
+    <img id="appInstallImg" src="./img/app.png" alt="Instalar NOVA Seeds" loading="eager" decoding="async" fetchpriority="low" onerror="this.onerror=null;this.src='img/app.png';">
   </button>
 </section>
 
