--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <title>NOVA Seeds - Semillas De Colección</title>
 <link href="css/styles.css" rel="stylesheet"/>
 <link as="image" fetchpriority="high" href="img/logo.png" rel="preload"/>
-<link href="manifest.webmanifest" rel="manifest"/>
+<link href="manifest.json" rel="manifest"/>
+<link href="manifest.webmanifest" rel="manifest" media="(max-width:0px)"/>
 <link href="img/icon-192.png" rel="apple-touch-icon"/>
 <meta content="yes" name="apple-mobile-web-app-capable"/>
 <meta content="yes" name="mobile-web-app-capable"/>
