--- a/tutorial.html
+++ b/tutorial.html
@@ -7,13 +7,14 @@
   <meta name="description" content="Guía de germinación - NOVA Seeds.">
   <title>Guía de Germinación - NOVA Seeds</title>
   <link rel="stylesheet" href="css/styles.css">
-<link rel="manifest" href="manifest.webmanifest">
+  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="manifest.webmanifest" media="(max-width:0px)">
   <link rel="apple-touch-icon" href="img/icon-192.png">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 </head>
-<body class="theme-dark tutorial-page" class="tutorial-page">
+<body class="theme-dark tutorial-page">
   <header class="site-header">
     <div class="header-inner">
       <img class="site-logo" src="img/logo.png" alt="Logo de NOVA Seeds" decoding="async" loading="eager">
