--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
 <script defer="" src="js/app.js"></script>
 <script defer="" src="js/pwa.js"></script>
 <!-- WhatsApp Floating Button -->
-<a class="wa-toast" aria-label="Pedir por WhatsApp" href="https://wa.me/5491158768929?text=Hola%20NOVA%20Seeds%2C%20quiero%20hacer%20un%20pedido%20o%20consultar%20por%20variedades." rel="noopener" target="_blank">
+<div class="wa-stack" aria-label="Accesos rápidos">
+  <a class="wa-toast" aria-label="Pedir por WhatsApp" href="https://wa.me/5491158768929?text=Hola%20NOVA%20Seeds%2C%20quiero%20hacer%20un%20pedido%20o%20consultar%20por%20variedades." rel="noopener" target="_blank">
   <span class="wa-toast__icon" aria-hidden="true">
     <svg viewBox="0 0 24 24" width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M20 15.5c0 1.38-1.12 2.5-2.5 2.5H8l-4 3v-3H6.5C5.12 18 4 16.88 4 15.5v-8C4 6.12 5.12 5 6.5 5h11C18.88 5 20 6.12 20 7.5v8Z" fill="white" opacity="0.95"/>
@@ -111,13 +112,13 @@
   <span class="wa-toast__text">Pedir por WhatsApp</span>
 </a>
 
-<!-- App install (PWA) - debajo del toast de WhatsApp -->
-<section class="app-install-section" aria-label="Instalar app">
+  <section class="app-install-section" aria-label="Instalar app">
   <button class="app-toast app-install-btn" type="button" aria-label="Instalar NOVA Seeds">
     <img id="appInstallImg" src="./img/app.png" alt="Instalar NOVA Seeds" loading="eager" decoding="async" fetchpriority="low" onerror="this.onerror=null;this.src='img/app.png';">
   </button>
 </section>
 
-<a aria-label="WhatsApp" class="wa-fab" href="https://wa.me/5491158768929?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n." id="wa-fab" rel="noopener" target="_blank"></a>
+  <a aria-label="WhatsApp" class="wa-fab" href="https://wa.me/5491158768929?text=Hola%2C%20quiero%20m%C3%A1s%20informaci%C3%B3n." id="wa-fab" rel="noopener" target="_blank"></a>
+</div>
 </body>
 </html>
