--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
 <script defer="" src="js/pwa.js"></script>
 <!-- WhatsApp Floating Button -->
 <div class="wa-stack" aria-label="Accesos rápidos">
-  <a class="wa-toast" aria-label="Pedir por WhatsApp" href="https://wa.me/5491158768929?text=Hola%20NOVA%20Seeds%2C%20quiero%20hacer%20un%20pedido%20o%20consultar%20por%20variedades." rel="noopener" target="_blank">
+  <a class="wa-toast" aria-label="Compra x1 ud." href="https://wa.me/5491158768929?text=Hola%20NOVA%20Seeds%2C%20quiero%20hacer%20un%20pedido%20o%20consultar%20por%20variedades." rel="noopener" target="_blank">
   <span class="wa-toast__icon" aria-hidden="true">
     <svg viewBox="0 0 24 24" width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M20 15.5c0 1.38-1.12 2.5-2.5 2.5H8l-4 3v-3H6.5C5.12 18 4 16.88 4 15.5v-8C4 6.12 5.12 5 6.5 5h11C18.88 5 20 6.12 20 7.5v8Z" fill="white" opacity="0.95"/>
       <path d="M8 10.2h8M8 13h5.2" stroke="#25D366" stroke-width="2" stroke-linecap="round"/>
     </svg>
   </span>
-  <span class="wa-toast__text">Pedir por WhatsApp</span>
+  <span class="wa-toast__text">Compra x1 ud.</span>
 </a>
 
   <section class="app-install-section" aria-label="Instalar app">
