--- a/index.html
+++ b/index.html
@@ -52,7 +52,10 @@
 
 <section class="delivery-section" id="entregas">
   <div class="delivery-head">
-    <h3 class="delivery-title">Entregas personales</h3>
+    <div class="delivery-titles">
+      <h3 class="delivery-title">Entregas personales</h3>
+      <h3 class="delivery-title">Puntos de Encuentro Zona Centro</h3>
+    </div>
     <a class="delivery-map-link" href="https://share.google/aTvnKdci49puncguC" target="_blank" rel="noopener">Ver mapa</a>
   </div>
 
