--- a/tutorial.html
+++ b/tutorial.html
@@ -26,7 +26,7 @@
       <a class="tutorial-back" href="index.html" aria-label="Volver a la tienda">← Volver</a>
     </div>
 
-    <h1 class="tutorial-title">Guía de germinación</h1>
+    <h1 class="tutorial-title">Guía de Germinación</h1>
 
     <section class="tutorial-card">
       <h3>TEMPERATURA</h3>
@@ -77,6 +77,15 @@
         <li>Una vez que las semillas estén seguras, querrá colocar una luz LED FRIO a 13-15 cm (5-6 pulgadas) de distancia para fomentar el crecimiento.</li>
         <li>Finalmente, no se arriesgue a regar en exceso sus semillas en esta etapa temprana.</li>
       </ul>
+    </section>
+
+    <section class="tutorial-card">
+      <h3>CONSULTA POR WHATSAPP</h3>
+      <p>Si te quedó alguna duda sobre cómo germinar, escribinos por WhatsApp y te orientamos paso a paso.</p>
+      <p style="margin-top:12px; text-align:center;">
+        <a class="tutorial-cta" target="_blank" rel="noopener"
+           href="https://wa.me/5491158768929?text=Hola%2C%20quisiera%20recibir%20orientaci%C3%B3n%20adicional%20sobre%20el%20proceso%20de%20germinaci%C3%B3n.%20%C2%BFMe%20podr%C3%ADan%20ayudar%3F">Consultar por WhatsApp</a>
+      </p>
     </section>
 
 </main>
