--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   <div class="delivery-head">
     <div class="delivery-titles">
       <h3 class="delivery-title">Entregas personales</h3>
-      <h3 class="delivery-title">Puntos de Encuentro Zona Centro</h3>
+      <h3 class="delivery-title">Puntos de Encuentro</h3>
     </div>
     <a class="delivery-map-link" href="https://share.google/aTvnKdci49puncguC" target="_blank" rel="noopener">Ver mapa</a>
   </div>
