--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 <header class="site-header">
 <div class="header-inner">
 <img alt="Logo de NOVA Seeds" class="site-logo" decoding="async" fetchpriority="high" height="600" onerror="this.style.display='none'" src="img/logo.png" width="900"/>
+<img alt="BSF MixPack" class="site-logo-secondary" decoding="async" loading="eager" onerror="this.style.display='none'" src="img/bsf-mixpack.png" width="1274" height="513"/>
 </div>
 </header>
 <main>
