--- a/tutorial.html
+++ b/tutorial.html
@@ -18,6 +18,7 @@
   <header class="site-header">
     <div class="header-inner">
       <img class="site-logo" src="img/logo.png" alt="Logo de NOVA Seeds" decoding="async" loading="eager">
+      <img class="site-logo-secondary" src="img/bsf-mixpack.png" alt="BSF MixPack" decoding="async" loading="eager" onerror="this.style.display='none'" width="1274" height="513">
     </div>
   </header>
 
