--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <main>
 <section class="carousel-section theme-b" id="cuadro2">
 <div class="section-head">
-<h2 class="section-title-mobile">Genética autofloreciente</h2>
+<h2 class="section-title-mobile">MixPack Automaticas</h2>
 <div class="controls"><button aria-label="Anterior" id="prevBtn2">‹</button><button aria-label="Siguiente" id="nextBtn2">›</button></div>
 </div>
 <div aria-label="Carrusel de productos" class="carousel" id="carousel2"></div>
