--- a/index.html
+++ b/index.html
@@ -36,6 +36,18 @@
 
 <div class="section-divider" role="separator" aria-hidden="true"></div>
 
+	<!-- Promo (entre carrusel y guía) -->
+	<section class="promo-strip" aria-label="Promoción AutoMix">
+	  <img
+	    class="promo-strip__img"
+	    src="img/f1.png"
+	    alt="Promoción AutoMix"
+	    loading="lazy"
+	    decoding="async"
+	    width="1536"
+	    height="384"/>
+	</section>
+
 
 <section class="guide-section" id="guia">
   <div class="guide-head">
