--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
 	    width="1536"
 	    height="384"/>
 	  <div class="promo-strip__copy" aria-label="Detalle de promoción">
-	    Comprando cualquier AutoMix llevate <span class="promo-strip__copy-x5">x5</span> <span class="promo-strip__copy-auto">AUTOGRANEL</span>
+	    <span class="promo-strip__copy-text">Comprando cualquier AutoMix</span>
+	    <span class="promo-strip__copy-text">llevate</span>
+	    <span class="promo-strip__copy-x5">x5</span>
+	    <span class="promo-strip__copy-auto">AUTOGRANEL</span>
 	  </div>
 
 	</section>
