--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <script defer="" src="js/pwa.js"></script>
 <!-- WhatsApp Floating Button -->
 <div class="wa-stack" aria-label="Accesos rápidos">
-  <a class="wa-toast" aria-label="Compra x1 ud." href="https://wa.me/1158768929?text=Hola%20NOVA%20Seeds%2C%20%C2%BFtienen%20disponibilidad%20de%20semillas%20individuales%3F%20%C2%BFQu%C3%A9%20variedades%20tienen%20en%20stock%3F" rel="noopener" target="_blank">
+  <a class="wa-toast" aria-label="Compra x1 ud." href="https://l91158768929?text=Hola%20NOVA%20Seeds%2C%20%C2%BFtienen%20disponibilidad%20de%20semillas%20individuales%3F%20%C2%BFQu%C3%A9%20variedades%20tienen%20en%20stock%3F" rel="noopener" target="_blank">
   <span class="wa-toast__icon" aria-hidden="true">
     <svg viewBox="0 0 24 24" width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
       <path d="M20 15.5c0 1.38-1.12 2.5-2.5 2.5H8l-4 3v-3H6.5C5.12 18 4 16.88 4 15.5v-8C4 6.12 5.12 5 6.5 5h11C18.88 5 20 6.12 20 7.5v8Z" fill="white" opacity="0.95"/>
@@ -140,7 +140,7 @@
   </button>
 </section>
 
-  <a aria-label="WhatsApp" class="wa-fab" href="https://wa.me/1158768929?text=Hola%2C%20quisiera%20solicitar%20informaci%C3%B3n%20sobre%20sus%20productos%20y%20disponibilidad.%20%C2%A1Gracias%21" id="wa-fab" rel="noopener" target="_blank"></a>
+  <a aria-label="WhatsApp" class="wa-fab" href="https://l91158768929?text=Hola%2C%20quisiera%20solicitar%20informaci%C3%B3n%20sobre%20sus%20productos%20y%20disponibilidad.%20%C2%A1Gracias%21" id="wa-fab" rel="noopener" target="_blank"></a>
 </div>
 </body>
 </html>
