--- a/tutorial.html
+++ b/tutorial.html
@@ -85,7 +85,7 @@
       <p>Si te quedó alguna duda sobre cómo germinar, escribinos por WhatsApp y te orientamos paso a paso.</p>
       <p style="margin-top:12px; text-align:center;">
         <a class="tutorial-cta" target="_blank" rel="noopener"
-           href="https://l91158768929?text=Hola%20NOVA%20Seeds%2C%20quisiera%20recibir%20orientaci%C3%B3n%20adicional%20sobre%20el%20proceso%20de%20germinaci%C3%B3n.%20%C2%BFMe%20podr%C3%ADan%20ayudar%3F">Consultar por WhatsApp</a>
+           href="https://wa.me/5491158768929?text=Hola%20NOVA%20Seeds%2C%20tengo%20una%20duda%20sobre%20c%C3%B3mo%20germinar.%20%C2%BFMe%20pueden%20ayudar%3F">Consultar por WhatsApp</a>
       </p>
     </section>
 
