--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
 <meta content="yes" name="mobile-web-app-capable"/>
 <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style"/>
 <meta content="NOVA Seeds" name="apple-mobile-web-app-title"/>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-DBK2QSC1G7"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-DBK2QSC1G7');
+  </script>
+
 </head>
 <body class="theme-dark home-page">
 <!-- Banner superior -->
