--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
     <div class="delivery-titles">
       <h3 class="delivery-title">Entregas personales</h3>
       <h3 class="delivery-title">Puntos de Encuentro</h3>
+      <h3 class="delivery-title">Pagas Cuando lo Tenes</h3>
     </div>
     <a class="delivery-map-link" href="https://share.google/TZr6S8qyfGYY9pbjv" target="_blank" rel="noopener">Ver mapa</a>
   </div>
@@ -104,8 +105,49 @@
 
 <div class="section-divider" role="separator" aria-hidden="true"></div>
 
+<section class="contact-section" id="contacto" aria-label="Contacto">
+  <div class="contact-card" role="list">
+    <a class="contact-row contact-row--phone" role="listitem" href="https://wa.me/5491158768929" target="_blank" rel="noopener" aria-label="WhatsApp 1158768929">
+      <span class="contact-icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" width="26" height="26" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path d="M22 16.9v3.1a2 2 0 0 1-2.18 2 19.8 19.8 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6A19.8 19.8 0 0 1 2.02 4.2 2 2 0 0 1 4 2h3.1a2 2 0 0 1 2 1.72c.12.86.32 1.7.6 2.5a2 2 0 0 1-.45 2.11L8.1 9.48a15.8 15.8 0 0 0 6.42 6.42l1.15-1.15a2 2 0 0 1 2.11-.45c.8.28 1.64.48 2.5.6A2 2 0 0 1 22 16.9Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+        </svg>
+      </span>
+      <span class="contact-text">1158768929</span>
+    </a>
+
+    <div class="contact-divider" role="separator" aria-hidden="true"></div>
+
+    <a class="contact-row" role="listitem" href="https://novaseeds-argentina.github.io/MixPack/" target="_blank" rel="noopener" aria-label="Sitio web novaseeds-argentina.github.io/MixPack">
+      <span class="contact-icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" width="26" height="26" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <circle cx="12" cy="12" r="9" stroke="currentColor" stroke-width="2"/>
+          <path d="M3 12h18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <path d="M12 3c3 3.5 3 14.5 0 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+          <path d="M12 3c-3 3.5-3 14.5 0 18" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+        </svg>
+      </span>
+      <span class="contact-text">novaseeds-argentina.github.io/MixPack</span>
+    </a>
+
+    <div class="contact-divider" role="separator" aria-hidden="true"></div>
+
+    <a class="contact-row" role="listitem" href="https://www.google.com/maps?q=Humahuaca%204642" target="_blank" rel="noopener" aria-label="Dirección Humahuaca 4642">
+      <span class="contact-icon" aria-hidden="true">
+        <svg viewBox="0 0 24 24" width="26" height="26" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
+          <path d="M12 21s7-5.2 7-11a7 7 0 1 0-14 0c0 5.8 7 11 7 11Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
+          <circle cx="12" cy="10" r="2.5" stroke="currentColor" stroke-width="2"/>
+        </svg>
+      </span>
+      <span class="contact-text">Humahuaca 4642</span>
+    </a>
+  </div>
+</section>
+
+<div class="section-divider" role="separator" aria-hidden="true"></div>
+
 <section class="shipping-section" id="envios">
-  <h3 class="shipping-title">También hacemos envíos a todo el país por Andreani</h3>
+  <h3 class="shipping-title">Envíos a todo el país por Andreani (a cargo del comprador)</h3>
   <img class="shipping-img" src="img/andreani.png" alt="Andreani - Envíos a todo el país" loading="lazy" decoding="async" width="1500" height="292"/>
 </section>
 
