--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
 
 <div class="section-divider" role="separator" aria-hidden="true"></div>
 
+<section class="shipping-section" id="envios">
+  <h3 class="shipping-title">Envíos a todo el país por Andreani (a cargo del comprador)</h3>
+  <img class="shipping-img" src="img/andreani.png" alt="Andreani - Envíos a todo el país" loading="lazy" decoding="async" width="1500" height="292"/>
+</section>
+
+<div class="section-divider" role="separator" aria-hidden="true"></div>
+
 <section class="contact-section" id="contacto" aria-label="Contacto">
   <div class="contact-card" role="list">
     <a class="contact-row contact-row--phone" role="listitem" href="https://wa.me/5491158768929" target="_blank" rel="noopener" aria-label="WhatsApp 1158768929">
@@ -132,24 +139,28 @@
 
     <div class="contact-divider" role="separator" aria-hidden="true"></div>
 
-    <a class="contact-row" role="listitem" href="https://www.google.com/maps?q=Humahuaca%204642" target="_blank" rel="noopener" aria-label="Dirección Humahuaca 4642">
+    <a class="contact-row" role="listitem" href="https://www.google.com/maps?q=Humahuaca%204642" target="_blank" rel="noopener" aria-label="Dirección Humahuaca 4650">
       <span class="contact-icon" aria-hidden="true">
         <svg viewBox="0 0 24 24" width="26" height="26" fill="none" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
           <path d="M12 21s7-5.2 7-11a7 7 0 1 0-14 0c0 5.8 7 11 7 11Z" stroke="currentColor" stroke-width="2" stroke-linejoin="round"/>
           <circle cx="12" cy="10" r="2.5" stroke="currentColor" stroke-width="2"/>
         </svg>
       </span>
-      <span class="contact-text">Humahuaca 4642</span>
+      <span class="contact-text">Humahuaca 4650</span>
     </a>
   </div>
 </section>
 
 <div class="section-divider" role="separator" aria-hidden="true"></div>
 
-<section class="shipping-section" id="envios">
-  <h3 class="shipping-title">Envíos a todo el país por Andreani (a cargo del comprador)</h3>
-  <img class="shipping-img" src="img/andreani.png" alt="Andreani - Envíos a todo el país" loading="lazy" decoding="async" width="1500" height="292"/>
+<section class="app-install-section" aria-label="Instalar app">
+  <button class="app-toast app-install-btn" type="button" aria-label="Instalar NOVA Seeds">
+    <img id="appInstallImg" src="./img/app2.png" alt="Instalar NOVA Seeds" loading="eager" decoding="async" fetchpriority="low" onerror="this.onerror=null;this.src='img/app2.png';">
+  </button>
 </section>
+
+<footer class="site-footer" aria-label="Copyright">novaseeds-argentina 2026 todos los derechos reservados</footer>
+
 
 
 </main>
@@ -175,23 +186,7 @@
 <script defer="" src="js/pwa.js"></script>
 <!-- WhatsApp Floating Button -->
 <div class="wa-stack" aria-label="Accesos rápidos">
-  <a class="wa-toast" aria-label="Compra x1 ud." href="https://wa.me/5491158768929?text=Hola%20NOVA%20Seeds%2C%20quiero%20comprar%201%20unidad.%20%C2%BFQu%C3%A9%20variedades%20tienen%20en%20stock%3F" rel="noopener" target="_blank">
-  <span class="wa-toast__icon" aria-hidden="true">
-    <svg viewBox="0 0 24 24" width="22" height="22" fill="none" xmlns="http://www.w3.org/2000/svg">
-      <path d="M20 15.5c0 1.38-1.12 2.5-2.5 2.5H8l-4 3v-3H6.5C5.12 18 4 16.88 4 15.5v-8C4 6.12 5.12 5 6.5 5h11C18.88 5 20 6.12 20 7.5v8Z" fill="white" opacity="0.95"/>
-      <path d="M8 10.2h8M8 13h5.2" stroke="#25D366" stroke-width="2" stroke-linecap="round"/>
-    </svg>
-  </span>
-  <span class="wa-toast__text">Compra x1 ud.</span>
-</a>
-
-  <section class="app-install-section" aria-label="Instalar app">
-  <button class="app-toast app-install-btn" type="button" aria-label="Instalar NOVA Seeds">
-    <img id="appInstallImg" src="./img/app.png" alt="Instalar NOVA Seeds" loading="eager" decoding="async" fetchpriority="low" onerror="this.onerror=null;this.src='img/app.png';">
-  </button>
-</section>
-
-  <a aria-label="WhatsApp" class="wa-fab" href="https://wa.me/5491158768929?text=Hola%2C%20quisiera%20solicitar%20informaci%C3%B3n%20sobre%20sus%20productos%20y%20disponibilidad.%20%C2%A1Gracias%21" id="wa-fab" rel="noopener" target="_blank"></a>
+<a aria-label="WhatsApp" class="wa-fab" href="https://wa.me/5491158768929?text=Hola%2C%20quisiera%20solicitar%20informaci%C3%B3n%20sobre%20sus%20productos%20y%20disponibilidad.%20%C2%A1Gracias%21" id="wa-fab" rel="noopener" target="_blank"></a>
 </div>
 </body>
 </html>
